--- a/index.html
+++ b/index.html
@@ -6,21 +6,11 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Boundless Studio</title>
-		<meta
-			content="Meet Unicorns, a flexible and detailed Webflow template designed specifically to meet the needs of your growing startup. Attract visitors, share your story and grow your revenue with this professional but friendly template."
-			name="description" />
-		<meta
-			content="Unicorns - Webflow HTML Website Template"
-			property="og:title" />
-		<meta
-			content="Meet Unicorns, a flexible and detailed Webflow template designed specifically to meet the needs of your growing startup. Attract visitors, share your story and grow your revenue with this professional but friendly template."
-			property="og:description" />
-		<meta
-			content="Unicorns - Webflow HTML Website Template"
-			property="twitter:title" />
-		<meta
-			content="Meet Unicorns, a flexible and detailed Webflow template designed specifically to meet the needs of your growing startup. Attract visitors, share your story and grow your revenue with this professional but friendly template."
-			property="twitter:description" />
+		<meta content="Boundless Innovation" name="description" />
+		<meta content="Boundless Studio" property="og:title" />
+		<meta content="Boundless Innovation" property="og:description" />
+		<meta content="Boundless Studio" property="twitter:title" />
+		<meta content="Boundless Innovation" property="twitter:description" />
 		<meta property="og:type" content="website" />
 		<meta content="summary_large_image" name="twitter:card" />
 		<meta content="width=device-width, initial-scale=1" name="viewport" />
